Fix spacement on mobile

--- a/src/components/project/styles.module.scss
+++ b/src/components/project/styles.module.scss
@@ -76,6 +76,7 @@
   }
 
   svg {
+    margin-left: 18px;
     transform: translateX(0);
     transition: transform 0.3s ease;
 
